# zkUACoordination

./: Dockerfile  Makefile.am  README.md  clientConf.txt  configure  configure.ac  libtool  serverConf.txt
examples/: cli_UA_server.c
include/: nodeset.h  open62541.h  simple_parse.h  zk_cli.h  zk_clientReplicate.h  zk_global.h  zk_intercept.h  zk_jsonDecode.h  zk_jsonEncode.h  zk_serverReplicate.h  zk_urlEncode.h
src/: cli_UA_client.c  cli_UA_failoverController.c  nodeset.c  open62541.c  simple_parse.c  zk_cli.c  zk_clientReplicate.c  zk_intercept.c  zk_jsonDecode.c  zk_jsonEncode.c  zk_serverReplicate.c  zk_urlEncode.c
